- printer output is single, not double buffered
- Changes in the prefetch code for some instructions
- Changed behavior of the Microwire registers in Falcon mode
- Fixes to few Falcon IO registers
- 68040 MMU emulation fixes
- add more timings for the 224 bytes overscan detection on STE
- Correct PC in stack when JMP generates an illegal address exception

Emulator:
- Support run-time changing of CPU level and machine type from
  the GUI also with WinUAE CPU core
- Change max allowed VDI resolution from 1280x960 to 1920x1200
- Revert preferred Videl resolution max zooming size setting from
  host desktop resolution back to 832x576 it was in Hatari v1.4,
  so that Falcon/TT emulation window sizes by default are closer
  to ST/STE ones on larger resolution monitors
- Fix statusbar assert
- Debugging improvements:
  - Fix to debugger CPU cycle profiling modifying CPU state
  - Profiling info is shown at end of disassembly lines
  - Support for tracing all symbols loaded to the debugger,
    this can be used to get CPU and DSP function traces
  - Show args for all Bios and most XBios & Gemdos calls when tracing
  - "info" command can output opcode tables for BIOS & XBIOS too
  - More info to FDC, IKBD, Videl and Crossbar traces

Other changes:
- Hatari UI supports file paths with spaces in them and spaces in Hatari
  options given through its control socket can be quoted with '\'.
- Support for alpha-numeric characters in Hconsole "text" command
- Fixes to Hatari UI and hconsole error handling and examples
- TOS tester testing covers more GEMDOS functionality and is fully
  automated 

Fixed Games :
  Hammerfist (fire button),
  Automation 168 - Operation Clean Streets (prefetch in the CPU emulation)
  Impossible Mission II (some versions had the same prefetch issue in the CPU)
  Hades Nebula (fire button)

Fixed demos :
  Built-in Obsolescence (DSP stack overflow)
  Japtro and Rising Force by Holocaust (FDC, buggy loader)
  Delirious Demos IV (video, STE detection)