@@ -49,7 +49,7 @@
 <h1 class="pageheader">Hatari Atari Software Compatibility List</h1>
 
 <p class="pageheader">
-Version 1.6.1
+Version 1.6.2
 </p>
 <p class="pageheader">
 This list has been written by: <strong>Thomas Huth</strong>, <strong>Eero Tamminen</strong>
@@ -1363,8 +1363,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     <tr>
       <td>ICE:
       <a href="http://www.pouet.net/prod.php?which=31451">The Wave Of The Future</a></td>
-      <td class="minor">1.4</td>
-      <td>Top border is not correctly removing (maybe a wrong 4 cycles timing for VBL on STE)</td>
+      <td>1.6.2</td>
+      <td></td>
     </tr>
     <tr>
       <td>Imagina:
@@ -3310,7 +3310,7 @@ still retain their Atari sections:</p>
  src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!"
  border="0" height="31" width="88"></a></td>
       <td align="right">
-      Hatari development team, March 2012
+      Hatari development team, May 2012
       </td>
     </tr>
   </tbody>
